# maildav-test-andika

./: README.md
backend/: README.md  main.py  pyproject.toml
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/components/atoms/: footer.vue
frontend/components/molecules/: uploader.vue
frontend/composables/: imageFetcher.ts
frontend/pages/: index.vue
frontend/stores/: imageStore.ts
